# dbapp

./: .pre-commit-config.yaml  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 33aafc656715_init_schema.py  775376f4a90f_add_created_and_indeces.py
dbapp/: __main__.py  schema.py
tests/: conftest.py  test_10_schema.py
